# jov-2025-forward-remapping-mislocalization-code

./: .gitignore  README.md  pyproject.toml
digitization/honda-1991-time-courses/: H1991-TC-Fig2-alldata.csv  H1991-TC-Fig2.json  H1991-TC-Fig3-alldata.csv  H1991-TC-Fig3.json
digitization/honda-1993-contingent-structured-bg/: Fig3-H1993-all.csv  Fig3-H1993.json
digitization/honda-1999-modification-contingent-frame/: Fig3-Dark-Honda1999-all-datasets.csv  Fig3-Dark-Honda1999.json  fig-filename.txt
img/: task_diagram.typ
notebooks/: generate_figures.py
src/: constants.py  parameterization.py
src/analytical/: __init__.py
src/callback/: __init__.py  disabler.py  handle.py  mixin.py
src/dft/: count_bumps.py  decoding.py  input.py  kernels.py  model.py  params.py  space.py
src/dft/interactivity/: __init__.py
src/dft/ode/: __init__.py  noise.py
src/dft/sim/: __init__.py  applications.py  base.py  core.py  param_manager.py
src/digitized/: honda.py  wpd_utils.py
src/figures/: __init__.py  base.py  base_misloc.py  labels.py
src/figures/appendix/: amp_misloc.py  beta_offset.py  early_dec_misloc.py  eta_misloc_grid.py  eta_misloc_row.py
src/figures/appendix/jump/: core.py  misloc.py  profile.py
src/figures/main/: components.py  misloc.py  pop_resp.py
src/figures/plotting/: __init__.py
src/figures/style/: __init__.py
src/signals/: __init__.py  eta.py  eye.py
src/signals/input/: __init__.py  spatial.py  temporal.py
src/utils/: eqx.py  export.py  interactivity.py  math.py  typst.py
src/utils/profile/: __init__.py
